<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3399ff"
    tools:context="com.example.georgia.sps_localization.ParticleInfo">

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Start"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:onClick="StopTraining"
        android:text="@string/stopTrain" />

    <Button
        android:id="@+id/Start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="GoToParticles"
        android:text="@string/goParticles" />

    <Button
        android:id="@+id/train"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/floor"
        android:layout_alignBottom="@+id/floor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:onClick="StartTraining"
        android:text="@string/startTrain" />

    <EditText
        android:id="@+id/floor"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/stop"
        android:layout_alignBottom="@+id/stop"
        android:layout_marginLeft="58dp"
        android:layout_marginStart="58dp"
        android:layout_toEndOf="@+id/train"
        android:layout_toRightOf="@+id/train"
        android:ems="10"
        android:hint="@string/startFloor" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/descr"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/Steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/train"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="Steps: "
        android:textSize="20sp" />
</RelativeLayout>
