<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #3399ff"
    tools:context="com.example.georgia.sps_localization.BayesFilter">

    <TextView
        android:id="@+id/bayesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp"
        android:gravity="center"
        android:text="@string/Bayes"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="267dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/ButtonLocate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="210dp"
        android:layout_marginRight="210dp"
        android:text="@string/locate"
        tools:layout_editor_absoluteX="221dp"
        tools:layout_editor_absoluteY="212dp" />

    <TextView
        android:id="@+id/cellNumber"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bayesTitle"
        android:layout_marginLeft="107dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="71dp"
        android:text="@string/cell_number"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/possibility"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cellNumber"
        android:layout_alignBottom="@+id/cellNumber"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:text="@string/possibility"
        android:textSize="18sp" />
</RelativeLayout>
