<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #3399ff"
    tools:context="com.example.georgia.sps_localization.MainActivity">

    <Button
        android:id="@+id/BayesButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="78dp"
        android:layout_marginLeft="96dp"
        android:layout_marginStart="96dp"
        android:onClick="GoToBayes"
        android:text="@string/Bayes" />

    <Button
        android:id="@+id/ParticleButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/BayesButton"
        android:layout_alignBottom="@+id/BayesButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:text="@string/Particle" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="20sp" />
</RelativeLayout>
